fixed broken link to JS file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dice Roller</title>
     <link rel="stylesheet" href="style.css">
-    <script src="Dice_Roller.js"></script>
+    <script src="diceRoller.js"></script>
 </head>
 <body>
     <header>
